test_suite/tests/compile_fail/optional_fields_in_unnamed_enum.rs
use ronky::Exported;

#[derive(Exported)]
enum OptionalFields {
    ThisRequiesAValue(Option<String>),
}

fn main() {}
